[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cabinet_sdk"
version = "0.1.2"
authors = [
  { name="Kathleen Noble", email="kitkat_kathleen@yahoo.com" },
]
description = "Client for Cabinet, a flexible blob storage system"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["requests", "PyYAML", "google-cloud-storage"]

[project.urls]
"Homepage" = "https://github.com/paper-dragonfly/cabinet_sdk"
"Bug Tracker" = "https://github.com/paper-dragonfly/cabinet_sdk/issues"